make new demo more similar to Elm source... implement simple IO effects

--- a/elm-architecture-talk.cabal
+++ b/elm-architecture-talk.cabal
@@ -7,7 +7,7 @@ cabal-version: 1.12
 -- hash: bcb42abc1708df9bd17909f0af1178c8b8eda432b0bfdd0b4475356db02770e3
 
 name:           elm-architecture-talk
-version:        0.1.0.0
+version:        0.1.1.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/elm-architecture-talk#readme>
 homepage:       https://github.com/githubuser/elm-architecture-talk#readme
 bug-reports:    https://github.com/githubuser/elm-architecture-talk/issues
@@ -26,6 +26,7 @@ source-repository head
 
 library
   exposed-modules:
+      VanillaElmArchitecture
       ElmArchitecture
       WebCrawler
   other-modules:
@@ -73,6 +74,25 @@ test-suite elm-architecture-talk-test
       Paths_elm_architecture_talk
   hs-source-dirs:
       test
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      ansi-terminal
+    , async
+    , attoparsec
+    , base >=4.7 && <5
+    , bytestring
+    , containers
+    , elm-architecture-talk
+    , http-client
+    , http-client-tls
+    , http-types
+    , text
+  default-language: Haskell2010
+
+executable elm-architecture-demo
+  main-is: InputOutputDemo.hs
+  hs-source-dirs:
+      app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       ansi-terminal
